--- a/output.css
+++ b/output.css
@@ -642,6 +642,14 @@ video {
   height: 5rem;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .w-0 {
   width: 0px;
 }
@@ -664,6 +672,14 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .max-w-\[37rem\] {
