--- a/output.css
+++ b/output.css
@@ -626,28 +626,16 @@ video {
   height: 2.5rem;
 }
 
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-\[3\.125rem\] {
-  height: 3.125rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
 .h-20 {
   height: 5rem;
 }
 
-.h-16 {
-  height: 4rem;
+.h-5 {
+  height: 1.25rem;
 }
 
-.h-14 {
-  height: 3.5rem;
+.h-full {
+  height: 100%;
 }
 
 .w-0 {
@@ -658,28 +646,16 @@ video {
   width: 0.125rem;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-\[3\.125rem\] {
-  width: 3.125rem;
-}
-
-.w-full {
-  width: 100%;
-}
-
 .w-20 {
   width: 5rem;
 }
 
-.w-16 {
-  width: 4rem;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-14 {
-  width: 3.5rem;
+.w-full {
+  width: 100%;
 }
 
 .max-w-\[37rem\] {
@@ -700,6 +676,10 @@ video {
 
 .flex-none {
   flex: none;
+}
+
+.list-none {
+  list-style-type: none;
 }
 
 .flex-col {
@@ -908,6 +888,11 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
+.hover\:text-gray-100:hover {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
@@ -945,16 +930,8 @@ video {
     display: none;
   }
 
-  .sm\:h-\[3\.75rem\] {
-    height: 3.75rem;
-  }
-
   .sm\:h-24 {
     height: 6rem;
-  }
-
-  .sm\:w-\[3\.75rem\] {
-    width: 3.75rem;
   }
 
   .sm\:w-24 {
